--- a/src/App.css
+++ b/src/App.css
@@ -29,67 +29,11 @@ footer {
   text-align: center;
 }
 
-.wrapper {
-  background: #f5f5f5;
-  text-align: center;
-  padding-top: 80px;
-}
-
-.puzzle-game {
-  text-align: center;
-  min-height: 550px;
-}
-
-.title {
-  color: #2c3e50;
-}
-
-.steps {
-  font-weight: 400;
-}
-
-.puzzle-wrapper {
-  position: relative;
-  margin: 0 auto;
-  max-width: 480px;
-}
-
-.puzzle {
-  position: absolute;
-  width: 33%;
-  font-size: 2.4em;
-  background-color: #ffffff;
-  color: #4B5F6D;
-  font-weight: bold;
-  border: 1px solid #ddd;
-}
-
-.puzzle:after {
-  content: "";
-  display: block;
-  padding-bottom: 100%;
-}
-
-.puzzle .content {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 0px;
-  width: 100%;
-}
-
-.rank-table {
-  max-width: 800px;
-  margin: 0 auto;
-  background: white;
-  padding: 20px;
-}
-
 @media (max-width: 650px) {
-  .ant-layout-content {
+  main {
     padding: 0;
   }
-  .puzzle-game {
+  .wrapper {
     padding: 20px 10px;
   }
 }
